# MelodyWithLSTM

./: file_dataset  mapping.json  mel.mid  melody_generation.py  model.h5  preprocessing.py  pyproject.toml  train.py
dataset_preprocessing/deutschl/allerkbd/: CKSUM
dataset_preprocessing/deutschl/altdeu1/: CKSUM
dataset_preprocessing/deutschl/altdeu2/: CKSUM
dataset_preprocessing/deutschl/ballad/: CKSUM
dataset_preprocessing/deutschl/boehme/: CKSUM
dataset_preprocessing/deutschl/dva/: CKSUM
dataset_preprocessing/deutschl/erk/: CKSUM
dataset_preprocessing/deutschl/fink/: CKSUM
dataset_preprocessing/deutschl/kinder/: CKSUM
dataset_preprocessing/deutschl/test/: CKSUM
dataset_preprocessing/deutschl/variant/: CKSUM
dataset_preprocessing/deutschl/zuccal/: CKSUM
